[package]
name = "octo-journey"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.*"
axum = { version = "0.7.*", features = ["tracing"] }
axum-macros = "0.4.*"
clap = { version = "4.5.*", features = ["env"] }
lazy_static = "1.4.*"
rand = "0.8.*"
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"
tokio = { version = "1.37.*", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.5.*", features = ["trace"] }
tracing = "0.1.*"
tracing-subscriber = { version = "0.3.*", features = ["env-filter"] }
utoipa = { version = "4.2.*", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6.0.*", features = ["axum"] }
uuid = { version = "1.8.*", features = ["v4", "serde"] }
